compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Shell/content/Models/ProfileModel.cs.pp
using System;
using System.ComponentModel.DataAnnotations;
using System.Runtime.Serialization;

namespace $rootnamespace$.Models
{
    public partial class ProfileModel
    {
        [Required]
        [Display(Name = "First Name")]
        public string FirstName { get; set; }

        [Required]
        [Display(Name = "Last name")]
        public string LastName { get; set; }

        [Required]
        [DataType(DataType.EmailAddress)]
        public virtual String Email { get; set; }
    }
}